# Simai

./: README.md  index.html  package-lock.json  package.json
.devcontainer/: devcontainer.json  devcontainer.vim.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
